# kdtree

./: KdTree.cabal  KdTree.hs  KdTreeTest.hs  LICENSE  Makefile  README  stack.yaml
Data/Trees/: KdTree.hs
Data/Trees/KdTree/Points/: Internal.hs  KdTree.hs
Data/Trees/KdTree/Regions/: Internal.hs
Data/Trees/KdTree/Regions/KThree/: Internal.hs  KThreeTree.hs
src/Data/Trees/: KdTree.hs
test/: KdTreeTest.hs  Main.hs
test/Points/: Internal.hs  KdTree.hs  KdTreeTest.hs
test/Regions/: Internal.hs  KdTree.hs  KdTreeTests.hs
