Name:                KdTree

-- The package version. See the Haskell package versioning policy
-- (http://www.haskell.org/haskellwiki/Package_versioning_policy) for
-- standards guiding when and how versions should be incremented.
Version:             0.3.1
Synopsis:            KdTree, for efficient search in K-dimensional point clouds.
Description:         
    This is a simple library for k-d trees in Haskell. It enables
    searching through collections of points in O(log N) average time,
    using the nearestNeighbor function.

Homepage:            https://github.com/ijt/kdtree
License:             BSD3
License-file:        LICENSE
Author:              Issac Trotts
Maintainer:          michael@schmong.org
Copyright:           Copyright 2011, Issac Trotts
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.22
Extra-source-files:  README

source-repository head
  type:     git
  location: git@github.com:ijt/kdtree.git

Library
  default-language: Haskell2010
  ghc-options: -Wall -Werror -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  Exposed-modules: Data.Trees.KdTree.Points.KdTree
  Build-depends:  base >= 4.8 && < 5
                , AC-Vector >= 2.3.0
                , QuickCheck
  
Test-suite KdTreeTest
  Type:             exitcode-stdio-1.0
  Main-is:          KdTreeTest.hs
  Default-language: Haskell2010
  Build-depends:    base >= 4.8 && < 5
                  , QuickCheck

