Name:                KdTree

-- The package version. See the Haskell package versioning policy
-- (http://www.haskell.org/haskellwiki/Package_versioning_policy) for
-- standards guiding when and how versions should be incremented.
Version:             0.2.2.0
Synopsis:            KdTree, for efficient search in K-dimensional point clouds.
Description:         
    This is a simple library for k-d trees in Haskell. It enables
    searching through collections of points in O(log N) average time,
    using the nearestNeighbor function.

Homepage:            https://github.com/binarysunrise-io/kdtree
License:             BSD3
License-file:        LICENSE
Author:              Issac Trotts
Maintainer:          jesse.kempf@binarysunrise.io
Copyright:           Copyright 2011, Issac Trotts & Contributors
Category:            Data Mining, Data Structures, Graphics, Machine Learning
Build-type:          Simple
Cabal-version:       >=1.10
Extra-source-files:  README

source-repository head
  type:     git
  location: git@github.com:binarysunrise-io/kdtree.git

Library
  Default-language: Haskell2010
  Exposed-modules:  Data.Trees.KdTree
  Build-depends:    base < 5
                 ,  QuickCheck
  
Test-suite KdTreeTest
  Type:             exitcode-stdio-1.0
  Main-is:          KdTreeTest.hs
  Default-language: Haskell2010
  other-modules:    Data.Trees.KdTree

  Build-depends:    base >= 4.8 && < 5
                  , QuickCheck
