Name:                KdTree

-- The package version. See the Haskell package versioning policy
-- (http://www.haskell.org/haskellwiki/Package_versioning_policy) for
-- standards guiding when and how versions should be incremented.
Version:             0.2.2.1
Synopsis:            KdTree, for efficient search in K-dimensional point clouds.
Description:         
    This is a simple library for k-d trees in Haskell. It enables
    searching through collections of points in O(log N) average time,
    using the nearestNeighbor function.

Homepage:            https://github.com/binarysunrise-io/kdtree
License:             BSD3
License-file:        LICENSE
Author:              Issac Trotts
Maintainer:          jesse.kempf@binarysunrise.io
Copyright:           Copyright 2011, Issac Trotts & Contributors
Category:            Data Mining, Data Structures, Graphics, Machine Learning
Build-type:          Simple
Cabal-version:       >=1.10
Extra-source-files:  README

source-repository head
  type:     git
  location: git@github.com:binarysunrise-io/kdtree.git

Library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:  Data.Trees.KdTree
  build-depends:    base < 5
                 ,  QuickCheck
  
Test-suite KdTreeTest
  type:             exitcode-stdio-1.0
  main-is:          KdTreeTest.hs
  default-language: Haskell2010
  hs-source-dirs:   test
  build-depends:    base >= 4.8 && < 5
                  , KdTree
                  , QuickCheck
